# mcp

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
examples/: basic.rs
src/: lib.rs  schema.rs  server.rs
tool-macros/: Cargo.toml
tool-macros/src/: lib.rs
